# Customer-Segmentation

./: .replit  Customer_Segmentation_Seminar.ipynb  README.md  app.py  customer_segmentation_dashboard.py  model.py  pyproject.toml  replit.md  style.css
utils/: data_explorer.py  file_handler.py  model_analyzer.py  notebook_analyzer.py  predictor.py
